Working "save" button

--- a/tracery-editor/css/page.css
+++ b/tracery-editor/css/page.css
@@ -85,6 +85,10 @@ body {
 #origin-select {
 	width:100px;
 }
+.save-button {
+  float: left;
+  margin: 3px;
+}
 .login-id {
 	float:left;
 	top:-4px;
