--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -57,8 +57,16 @@
       {% assign week = week | plus: 1 %}
     </div>
     {% endif %}
+    {% assign class = class | plus: 1 %}
+    {% comment %}Check if the first day of the semester is the first day of the week{% endcomment %}
+    {% if class == 1 and weekDay != site.data[dataKey].meets[0] %}
+      {% for d in site.data[dataKey].meets %}
+        {% if weekDay == d %}{% break %}{% endif %}
+        {% assign class = class | plus: 1 %}
+    <div class="schedule__meeting">&nbsp;</div>
+      {% endfor %}
+    {% endif %}
     <div class="schedule__meeting">
-      {% assign class = class | plus: 1 %}
       <p class="schedule__date">{{ day | date: "%a %m/%d" }}</p>
       {% if isRedefined.size != 0 %}
         <p class="schedule__redefined-day">Redefined Day</p>
