--- a/_layouts/syllabus.html
+++ b/_layouts/syllabus.html
@@ -16,12 +16,12 @@
     <article class="container-lg px-3 my-5 markdown-body">
       <div class="columns">
         <div class="column col-12">
-          <h1><a href="{{ "/" | absolute_url }}">{{ title }}</a></h1>
+          <h1><a href="{{ page.url | absolute_url }}">{{ title }}</a></h1>
         </div>
 
         <div class="js-toc column col-md-2 d-none d-md-block float-md-right position-md-sticky"></div>
 
-      <div class="content column col-md-10">
+        <div class="content column col-md-10">
           {{ content }}
         </div>
 
